--- a/EmployeeFinder/app/public/survey.html
+++ b/EmployeeFinder/app/public/survey.html
@@ -177,22 +177,22 @@
 
 
 
-    <!-- <div class="modal fade" id="mainModal" role="dialog"> -->
-        <!-- <div class="modal-dialog"> -->
-            <!-- <div class="modal-content"> -->
-                <!-- <div class="modal-header"> -->
-                    <!-- <h2 class="modal-title">Best Match</h2> -->
-                <!-- </div> -->
-                <!-- <div class="modal-body"> -->
-                    <!-- <h3 id="newEmp"></h3> -->
-                    <!-- <img id="newpic" alt="" width="100%"> -->
-                <!-- </div> -->
-                <!-- <div class="modal-footer"> -->
-                    <!-- <button type="button" class="btn btn-default" data-dismiss="modal">Close</button> -->
-                <!-- </div> -->
-            <!-- </div> -->
-        <!-- </div> -->
-    <!-- </div> -->
+    <div class="modal1" id="mainModal" role="dialog">
+        <div class="modal2">
+            <div class="modalC">
+                <div class="modalH">
+                    <h2 class="modalT">Best Match</h2>
+                </div>
+                <div class="modal-body">
+                    <h3 id="newEmployee"></h3>
+                    <img id="newpic" alt="" width="100%">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     
